--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(graphics_project)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(graphics_project main.cpp)
+add_executable(graphics_project test_shapes.cpp)
