attempt two at adding skeleton of svg class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@ add_library(canvas canvas.cpp canvas.h
         attributes.cpp
         attributes.h
         mock.cpp
-        mock.h)
+        mock.h
+        svg.cpp
+        svg.h)
 add_executable(canvas_testing test_canvas.cpp)
 target_link_libraries(canvas_testing PUBLIC canvas)
 add_executable(graphics_project test_shapes.cpp)
