I added shape.h and shape.cpp and updated Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,7 @@ add_library(canvas canvas.cpp canvas.h
         mock.h)
 add_executable(canvas_testing test_canvas.cpp)
 target_link_libraries(canvas_testing PUBLIC canvas)
+
 add_executable(graphics_project test_shapes.cpp)
+add_library(shapes shape.cpp shape.h)
+target_link_libraries(graphics_project PUBLIC shapes)
