created key_utils to handle creation of keys from strings and ints to make inputting arguments for svg files easier. Mostly finished Svg constructor and started work on output_svg_file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ add_library(canvas canvas.cpp canvas.h
         mock.cpp
         mock.h
         svg.cpp
-        svg.h)
+        svg.h
+        key_util.cpp
+        key_util.h)
 add_executable(canvas_testing test_canvas.cpp)
 target_link_libraries(canvas_testing PUBLIC canvas)
 
