I completed rectangle.h and .cpp, I added and completed line.h and .cpp, I updated test_shapes.cpp and cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,7 @@ add_library(shapes shape.cpp shape.h
         circle.cpp
         circle.h
 rectangle.h
-rectangle.cpp)
+rectangle.cpp
+line.cpp
+line.h)
 target_link_libraries(graphics_project PUBLIC shapes canvas)
